[package]
name = "slugmin"
keywords = ["slugify", "slug", "id"]
version = "1.0.0"
authors = ["Rafał Mikrut <mikrutrafal@protonmail.com>"]
edition = "2018"

description = "Slug version which allows to use spaces and big letters."
license = "MIT/Apache-2.0"
readme = "README.md"

repository = "https://github.com/qarmin/slugmin"
homepage = "https://github.com/qarmin/slugmin"
documentation = "https://docs.rs/slugmin"

[dependencies]
deunicode = "1"
